--- a/focus-task/src/pages/Tab1.css
+++ b/focus-task/src/pages/Tab1.css
@@ -6,3 +6,21 @@ a{
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background: #f2f2f2 !important;
+    padding: 20px !important;
+}
+#main-content{
+    width: 390px;
+    border-radius: 30px;
+    left: calc(50% - 195px) !important;
+    margin: 10px 0 !important;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) !important;
+}
+.ion-page{
+    width: 390px;
+    border-radius: 30px;
+    left: calc(50% - 195px) !important;
+    margin: 10px 0 !important;
+   
+}
